2024-05-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-connection-local-p): Sync with
	Emacs source.
	(tramp-compat-connection-local-value): New defalias.

	* tramp-message.el (tramp-warning): New defsubst.

	* tramp.el (tramp-direct-async-process): New defvar.
	(tramp-direct-async-process-p): Use connection-local variable for
	check.  (Bug#70959)

2024-05-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	Use `tramp-user-error' for the traces.

2024-05-14  Po Lu  <luangruo@yahoo.com>

	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	Search for `su' when the connection is initiated; replace PATH of
	inferior shell with trap-androidsu-remote-path.
	(tramp-androidsu-handle-make-process): Do not provide username if
	root.

2024-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-unlock-file): Be quiet if user isn't
	interested in lock files.  (Bug#70900)

2024-05-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-regexp): Add OpenSUSE host names.

	* tramp-compat.el (tramp-nspawn): Warn, if that package is used.

	* tramp-container.el (tramp-nspawn-program): New defcustom.
	(tramp-nspawn-method): New defconst.
	(tramp-nspawn--completion-function, tramp-enable-nspawn-method):
	New defuns.

2024-05-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-enable-run0-method): New defun.
	(tramp-sh-handle-expand-file-name): Add "run0".
	(tramp-maybe-open-connection): Simplify setting timeout.

	* tramp-cmds.el (tramp-file-name-with-method): Add "run0".

	* tramp.el (tramp-completion-dissect-file-name):
	* tramp-cmds.el (tramp-list-remote-buffers):
	* tramp-smb.el (tramp-smb-handle-insert-directory):
	Use `tramp-compat-keep-seq'.

2024-05-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-seq-keep): New defalias.

	* tramp.el (tramp-enable-method):