@@ -1,3 +1,9 @@
+2024-05-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-find-shell, tramp-find-inline-compress)
+	(tramp-get-remote-path):
+	* tramp-smb.el (tramp-smb-handle-process-file): Use `tramp-warning'.
+
 2024-05-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-connection-local-p): Sync with
